<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nitdurgapur.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_academics"
        android:name="com.example.nitdurgapur.ui.AcademicsFragment"
        android:label="@string/menu_academics"
        tools:layout="@layout/fragment_academics" />

    <fragment
        android:id="@+id/nav_administration"
        android:name="com.example.nitdurgapur.ui.AdministrationFragment"
        android:label="@string/menu_administration"
        tools:layout="@layout/fragment_administration" />

    <fragment
        android:id="@+id/nav_admission_2020"
        android:name="com.example.nitdurgapur.ui.Admission2020Fragment"
        android:label="@string/menu_admission_2020"
        tools:layout="@layout/fragment_admission_2020" />

    <fragment
        android:id="@+id/nav_research_and_collaboration"
        android:name="com.example.nitdurgapur.ui.ResearchAndCollaborationFragment"
        android:label="@string/menu_research_and_collaboration"
        tools:layout="@layout/fragment_research_and_collaboration" />

    <fragment
        android:id="@+id/nav_facilities"
        android:name="com.example.nitdurgapur.ui.FacilitiesFragment"
        android:label="@string/menu_facilities"
        tools:layout="@layout/fragment_facilities" />

    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.nitdurgapur.ui.InformationFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_students_and_alumni"
        android:name="com.example.nitdurgapur.ui.StudentsAndAlumniFragment"
        android:label="@string/menu_students_and_alumni"
        tools:layout="@layout/fragment_students_and_alumni" />

    <fragment
        android:id="@+id/nav_institutional_activities"
        android:name="com.example.nitdurgapur.ui.InstitutionalActivitiesFragment"
        android:label="@string/menu_institutional_activities"
        tools:layout="@layout/fragment_institutional_activities" />
</navigation>