<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Login">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/login_content_description_bg"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_pane_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/login_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshapeboderlesswhitebg"
            android:fontFamily="@font/calibri"
            android:textColor="#96ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/login_text_skip" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_pane_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/login_content_description_logo"
            android:src="@drawable/login_logo" />

    </LinearLayout>


    <TextView
        android:id="@+id/login_pane_college_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pane_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/login_text_college_name"
        android:textColor="#9affffff"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/login_pane_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri"
            android:text="@string/login_text_info"
            android:layout_marginBottom="10dp"
            android:textColor="#9affffff"
            android:textSize="15sp"  />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="email"
                android:drawableEnd="@drawable/ic_email_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_lock_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/login_text_sign_in"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/login_text_forget_password"
            android:textAlignment="center"
            android:textColor="#96ffffff"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>
