<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:id="@+id/custom_messages_layout_rel_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="7dp"
        android:background="@drawable/circle_border">

        <ImageView
            android:id="@+id/custom_messages_layout_user_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/description_profile_image"
            android:padding="2dp"
            android:scaleType="fitStart" />

    </RelativeLayout>

    <TextView
        android:id="@+id/receiver_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/custom_messages_layout_rel_layout"
        android:background="@drawable/receiver_messages_layout"
        android:fontFamily="@font/calibri"
        android:padding="10dp"
        android:text="@string/receiver_message"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/message_sender_linear_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/sender_messages_layout"
        android:padding="5dp">

        <ImageView
            android:id="@+id/message_sender_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/message_sender_text_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_sender_image_view"
            android:fontFamily="@font/calibri"
            android:padding="5dp"
            android:text="@string/date_and_time"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message_receiver_linear_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/custom_messages_layout_rel_layout"
        android:background="@drawable/receiver_messages_layout"
        android:padding="5dp">

        <ImageView
            android:id="@+id/message_receiver_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/message_receiver_text_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_receiver_image_view"
            android:fontFamily="@font/calibri"
            android:padding="5dp"
            android:text="@string/date_and_time"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sender_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="@id/receiver_message_text"
        android:layout_alignParentEnd="true"
        android:background="@drawable/sender_messages_layout"
        android:fontFamily="@font/calibri"
        android:padding="10dp"
        android:text="@string/sender_message"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>