<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nitdgpchat.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorAccent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/custom_chat_bar_imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_border">

                <ImageView
                    android:id="@+id/custom_chat_bar_user_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/description_profile_image"
                    android:padding="2dp"
                    android:scaleType="fitStart" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@id/custom_chat_bar_imgUser"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/custom_chat_bar_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/calibri"
                    android:text="@string/name_default"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/custom_chat_bar_user_last_seen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri"
                    android:text="@string/last_seen_default"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/appBar_logo"
                android:layout_width="?android:actionBarSize"
                android:layout_height="?android:actionBarSize"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/login_content_description_logo"
                android:padding="2dp"
                android:src="@drawable/login_logo" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/private_messages_list_of_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_activity_linear_layout"
        android:layout_below="@+id/chat_toolbar"
        android:layout_marginBottom="6dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/chat_activity_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/chat_activity_send_files_btn"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/send_files" />

        <EditText
            android:id="@+id/chat_activity_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/chat_activity_send_message"
            android:layout_toEndOf="@id/chat_activity_send_files_btn"
            android:hint="Type a message"
            android:maxLines="5"
            android:padding="17dp" />

        <ImageButton
            android:id="@+id/chat_activity_send_message"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/ic_send_button" />

    </RelativeLayout>

</RelativeLayout>